<resources>
    <string name="app_name">DemoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all">View all</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="expence">Expense</string>
    <string name="income">Income</string>
    <string name="add_date">Add Date</string>
    <string name="date">Date</string>
    <string name="selected_item" />
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="no_transaction_is_happened">No Transaction is happened</string>
    <string-array name="SourceType">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
</resources>