<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.DashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/courses_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#EFE6E6"
        android:elevation="15dp"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/course_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dashboard"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:id="@+id/parent_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D5420A"
        android:focusable="true"
        app:cardCornerRadius="15dp"
        app:contentPaddingBottom="5dp"
        app:contentPaddingLeft="10dp"
        app:contentPaddingRight="10dp"
        app:contentPaddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/courses_toolbar"
        tools:layout_editor_absoluteX="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/income" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginEnd="2dp"
                        android:text="₹" />
                    <TextView
                        android:id="@+id/txt_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:text="35000" />

                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expence"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginEnd="2dp"
                        android:text="₹" />
                    <TextView
                        android:id="@+id/txt_expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:text="35000" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_card">

        <TextView
            android:id="@+id/view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/view_all"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/recent_transaction"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/add"
        android:tintMode="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_no_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_transaction_is_happened"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courses_toolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/income_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:src="@drawable/ic_incoming"
        android:backgroundTint="#2CEE00"
        app:layout_constraintBottom_toTopOf="@+id/expense_fab"
        app:layout_constraintEnd_toEndOf="@+id/expense_fab"
        app:layout_constraintStart_toStartOf="@+id/expense_fab" />

    <TextView
        android:id="@+id/add_expense_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_expense"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/expense_fab"
        app:layout_constraintEnd_toStartOf="@+id/expense_fab"
        app:layout_constraintTop_toBottomOf="@+id/income_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/expense_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_outgoing"
        android:visibility="gone"
        android:backgroundTint="#BC0F4B"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab" />

    <TextView
        android:id="@+id/add_income_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/income_fab"
        app:layout_constraintEnd_toStartOf="@+id/income_fab"
        app:layout_constraintTop_toTopOf="@+id/income_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>